# marvin-template

.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
ardalan-bastani-website/: README.md  index.html  preview.html  view.html
ardalan-bastani-website/scripts/: process-images.py
content/grid2poster/: build_middle_east_extended.py  middle_east_extended.geojson
docs/adhd/: adhd-concepts.html  adhd-design-report.md
research/output/: 2026-07-01-adhd-cognitive-profile-app-design.md
xani/: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  RUNTIME.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
xani-demo/: XANI-BUILD-SPEC.md  app.html  concepts.html  identities.html  index.html  landing.html  open-loops.html  orb-assistant.html
xani-demo/gallery/: 01-liquid-metal.html  02-neural-galaxy.html  03-morph-text.html  04-wavefield.html  05-portal-tunnel.html  06-glass-crystal.html  07-aurora-flow.html  08-spiral-galaxy.html  09-nebula-orb.html  10-scroll-journey.html
xani/docs/: PERFORMANCE.md  PHONE.md  capabilities.md  first-run-on-mac.md  foundations.md  notifications.md  research-review.md  self-development.md  triage-rules.md  ui-data-shapes.md
xani/scripts/: dev-all.mjs  dev-remote.mjs  install-service.mjs  serve-remote.mjs  slack-diagnostic.mjs  trello-diagnostic.mjs
xani/sidecar/: agent.test.ts  agent.ts  brief.test.ts  (+37 more)
xani/src-tauri/: Cargo.toml  tauri.conf.json
xani/src-tauri/capabilities/: default.json
xani/src-tauri/icons/: icon.icns
xani/src-tauri/src/: db.rs  keychain.rs  lib.rs  main.rs
(+111 files in other folders)
