[package]
name = "xani"
version = "0.1.0"
description = "Xanî — a personal AI operating system. MARVIN at the centre."
authors = ["Rebaz"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "xani_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
